test/spec_vectors/simd_i8x16_cmp/fail/module_14.wat
(module (func $i8x16.ne-1st-arg-empty (result v128) (i8x16.ne (v128.const i8x16 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0))))